# riskpilot-m

./: .env.example  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
data/: mock_positions.json
docs/: adversary-gate-cycle5-response.md  demo-video-plan.md  feb25-briefing-plan.md  luma-registration-proof.md  phase1-concept-onepager.md  phase1-devpost-copy-mapped.md  phase1-video-script-60s.md  sprint-status.md  strategy-prize-matrix-correction.md  submission-checklist.md  submission-draft.md
docs/evidence/: .gitkeep
riskpilot_m/: demo_cli.py  health_factor.py  main.py
web/: index.html
